[package]
authors = ["Parity Technologies <admin@parity.io>", "Kirill Fomichev"]
description = "Transport agnostic rust implementation of JSON-RPC 2.0 Specification."
documentation = "https://docs.rs/jsonrpc-core-types/"
edition = "2021"
homepage = "https://github.com/paritytech/jsonrpc"
keywords = ["jsonrpc", "json-rpc", "json", "rpc", "serde"]
license = "MIT"
name = "jsonrpc-core-types"
repository = "https://github.com/fanatid/jsonrpc"
version = "18.0.0"

categories = [
	"asynchronous",
	"network-programming",
	"web-programming::http-client",
	"web-programming::http-server",
	"web-programming::websocket",
]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[features]
arbitrary_precision = ["serde_json/arbitrary_precision"]
